# logic-puzzle

./: .gitignore  BUGFIX.md  Cargo.toml  DEBUG_GUIDE.md  FEATURE_ANALYSIS.md  FINAL_SUMMARY.md  GAME_MODE_REFACTOR.md  GETTING_STARTED.md  GITHUB_PAGES_DEPLOY.md  LICENSE  MOBILE_READY.md  NEW_FEATURES.md  PROJECT.md  PROJECT_COMPLETE.md  QUICKREF.md  README.md  SECURITY.md  TAURI_NAMING_FIX.md  TOUCH_AND_AUTO_START.md  UPGRADE.md  WASM_IMPLEMENTATION.md  WASM_READY.md  index.html  package-lock.json  package.json  readme.md  vite.config.ts  实现参考.md
.claude/: settings.local.json
.github/workflows/: deploy.yml
logic_core/: Cargo.toml
logic_core/.cargo/: config.toml
logic_core/src/: board.rs  generator.rs  lib.rs  piece.rs  solver.rs  types.rs  wasm.rs
src/: App.tsx  index.html  main.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  main.rs
src/components/: Board.tsx  Controls.tsx  PieceTray.tsx
src/hooks/: useCommand.ts  useDeviceType.ts  useGameState.ts  useTauriCommand.ts  useWasmCommand.ts
src/types/: game.ts
