[package]
name = "logic-puzzle-app"
version = "0.1.0"
edition = "2021"
authors = ["Logic Puzzle Team"]

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.8", features = ["dialog-all", "fs-all", "shell-open"] }
serde.workspace = true
serde_json.workspace = true
logic_core = { path = "../logic_core" }

[features]
custom-protocol = ["tauri/custom-protocol"]
