[package]
name = "logic-puzzle-app"
version.workspace = true
edition.workspace = true
authors.workspace = true
rust-version = "1.85"

[build-dependencies]
tauri-build = { version = "2.1", features = [] }

[dependencies]
tauri = { version = "2.1", features = ["devtools"] }
tauri-plugin-dialog = "2.1"
tauri-plugin-fs = "2.1"
tauri-plugin-shell = "2.1"
serde.workspace = true
serde_json.workspace = true
logic_core = { path = "../logic_core" }

[features]
custom-protocol = ["tauri/custom-protocol"]
